# ChangeLog for dev-python/wxpython
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/wxpython/ChangeLog,v 1.121 2009/02/21 22:36:28 dirtyepic Exp $

*wxpython-2.8.9.2 (21 Feb 2009)

  21 Feb 2009; Ryan Hill <dirtyepic@gentoo.org>
  +files/wxpython-2.8.9-wxversion-scripts.patch,
  +files/wxpython-2.8-drop-editra.patch, +wxpython-2.8.9.2.ebuild:
  Version bump.
  Split editra out into its own package: app-editors/editra
  Install desktop entries for utilities.

  15 Feb 2009; Ryan Hill <dirtyepic@gentoo.org> ChangeLog, Manifest:
  Fix broken commit.

  15 Feb 2009; Ryan Hill <dirtyepic@gentoo.org> ChangeLog, Manifest:
  Remove old.

  15 Feb 2009; Brent Baude <ranger@gentoo.org> wxpython-2.8.9.1-r2.ebuild:
  Marking wxpython-2.8.9.1-r2 ppc for bug 254696

  07 Feb 2009; Raúl Porcel <armin76@gentoo.org> wxpython-2.8.9.1-r2.ebuild,
  wxpython-2.8.9.1-r3.ebuild:
  arm/ia64/sh/sparc stable wrt #254696

  06 Feb 2009; Jeroen Roovers <jer@gentoo.org> wxpython-2.8.9.1-r3.ebuild:
  Stable for HPPA (bug #254696).

  28 Jan 2009; Brent Baude <ranger@gentoo.org> wxpython-2.8.9.1-r2.ebuild:
  Marking wxpython-2.8.9.1-r2 ppc64 for bug 254696

  24 Jan 2009; Ryan Hill <dirtyepic@gentoo.org> -wxpython-2.6.4.0.ebuild:
  Remove ancient ebuild.

  24 Jan 2009; Alexis Ballier <aballier@gentoo.org>
  wxpython-2.6.4.0-r2.ebuild:
  keyword ~x86-fbsd

  22 Jan 2009; Raúl Porcel <armin76@gentoo.org> wxpython-2.6.4.0-r2.ebuild,
  wxpython-2.8.9.1-r3.ebuild:
  Readd ~arm/~sh

  19 Jan 2009; Alexis Ballier <aballier@gentoo.org>
  wxpython-2.8.9.1-r3.ebuild:
  keyword ~x86-fbsd, bug #254696

  18 Jan 2009; Markus Meier <maekke@gentoo.org> wxpython-2.8.9.1-r2.ebuild:
  amd64/x86 stable, bug #254696

  18 Jan 2009; Tobias Klausmann <klausman@gentoo.org>
  wxpython-2.8.9.1-r2.ebuild:
  Stable on alpha, bug #254696

*wxpython-2.8.9.1-r3 (18 Jan 2009)

  18 Jan 2009; Ryan Hill <dirtyepic@gentoo.org>