@@ -3,15 +3,19 @@ AUX wxpython-2.8-drop-editra.patch 2276 RMD160 dc3b1e9fbf57d5c5c4c97c6f6ccaf1bc0
 AUX wxpython-2.8-wxversion-demo.patch 219 RMD160 5ec8b5179fe03493786965849494adb0f697eb23 SHA1 92ccb9e099def1ff9ff842b5bfbbd769c1d06c6e SHA256 19618386cf750f56051541c403153bf1c7e90764199e53818eb0c9557d026f1c
 AUX wxpython-2.8.8-wxversion-scripts.patch 5388 RMD160 8c51be3ac56ea90889eaff571ede147fc8ef536a SHA1 d1737d4b82dcb4c180c0698c619b1c9bf06fa58f SHA256 0f911b437f638004b05c9d53ba9ca6498b9d85c793da3ba40787365cad079175
 AUX wxpython-2.8.9-wxversion-scripts.patch 7730 RMD160 e93c7b883b1ad22011df069d8d6ad24938ea8b07 SHA1 cf05e834a6e4325f51881f62113922e3aa20f5c4 SHA256 55b1caa38295338dda3cc9ebfa4e43eb3be76959a0ee9b23a7b81085d80d7ba6
+DIST wxPython-demo-2.8.10.1.tar.bz2 3605257 RMD160 00aa54621e3b0a16c2f77bb8b7663a64328c5e75 SHA1 2dc2df3ae3180866715ee7a2e9c2eb5bd7231ab2 SHA256 b2f15413e117547344a4b80db8bf6d2750c333454fcea427b38c9b62793643a0
 DIST wxPython-demo-2.8.9.1.tar.bz2 2989325 RMD160 39637183f4579e721e8d7354cd318146de1919c5 SHA1 ae06559ddb30a9ccc94db424e71b76d4aef16753 SHA256 7d9a9d276de5b27fce97ff319a442c7d68f754156207a57b6e0aa89c3f6882a8
 DIST wxPython-demo-2.8.9.2.tar.bz2 3552309 RMD160 e5ac5345f7503b4c3d483f681c39e26c7a3b3e54 SHA1 65e88f974de90d2f6843d1a9b2e0c0949441721c SHA256 0b18274f2aeec8293731406f456ba9d435aee99ef38b1533df8f1291b4736294
+DIST wxPython-docs-2.8.10.1.tar.bz2 2331639 RMD160 c1eadac650401895ae32739b316cda3c06cd60bf SHA1 d096994904aabdc23ca6717af640b32963798a16 SHA256 3992384869dcb3c757da5f4e63e7ef4ab24f2fa1842edd5e126be4856bb951c0
 DIST wxPython-docs-2.8.9.1.tar.bz2 2331065 RMD160 441e626b243fc01cb20a6c6e46b191f1c25a7cd1 SHA1 317dda174b4a85cc548125d7f58f9093686eace9 SHA256 2f0a23b0256dadaf9cec7869fd68a94035d5680c19264e55cfa229d79fe08e54
 DIST wxPython-docs-2.8.9.2.tar.bz2 2331251 RMD160 a2b7326e500a64994e2a782142491c03222c6a9e SHA1 6150721a762183a2d83bcd666ba5c9038283bb0d SHA256 c384c6d89aded996d17f72f4111a0b0c6891d17eee8f5a3a890b474a548d89f6
 DIST wxPython-newdocs-2.8.9.1.tar.bz2 1353170 RMD160 db69d32d7b25432d8159e5935e5edcb26f74b453 SHA1 014424980945e6ee0b684f71b3cbc0b6a7ea48ff SHA256 a1c951c190c491d5a784da11100dca13daab442877e36f00255a55ffbcdd026e
 DIST wxPython-newdocs-2.8.9.2.tar.bz2 1503913 RMD160 86084386383904972df15aa65ca26d1ad1a28a5d SHA1 eedef5ef87824b28a6fe4d338420cf6249ac1f2f SHA256 890b6b7ca37ba7aaa27f9716ea9992ac75ed8150e83939506e3c47f86e7f37a8
+DIST wxPython-src-2.8.10.1.tar.bz2 29770994 RMD160 bb606046d140623041b988e64ab268ced9aa958f SHA1 6598fbafd979a91f20100171fa23a91779f6dc62 SHA256 447690773279088e9d06dcfe56f00f310c0186de435969bb60b04ed0c3f25f5f
 DIST wxPython-src-2.8.9.1.tar.bz2 27969655 RMD160 2b193c867a028985f8ead4084a9c1f024a1d37c6 SHA1 7359af790d58082330c867f5c10f51b6382d9a35 SHA256 584bc8a90e413409c20d1aff05bf547809fc2b57b74c5aba60fc3a2a98a0e7fa
 DIST wxPython-src-2.8.9.2.tar.bz2 29370216 RMD160 93a9bd35b59e16674375b1431e24d47b58a824d2 SHA1 a0d58d8b9606d04a35b9853da15eb7dfb08d5637 SHA256 0683ef245d7c121dea7f16f08f0d2cd77348d588e6831cc3bc88cf23dc6029b5
+EBUILD wxpython-2.8.10.1.ebuild 5067 RMD160 f47a59383b513ee9c52d29c0ff1658a69e1c8eb3 SHA1 dbad969e54130eb0517d3b2b4f0ba5e64cbbbae5 SHA256 99ee026e43512acd283e99d68da61b532bb213eec95a73e930c95cbdab091f21
 EBUILD wxpython-2.8.9.1-r3.ebuild 4684 RMD160 fa3e8e6c99541f9ceda77b1298470a127c1bd9d5 SHA1 4c8e011628ac3d1a6920221fa69a77d68f812cb1 SHA256 e809e5515ff16dbf6f320bfaa00d170c014f8b070cb0fe90ea3dc9872b246aa9
 EBUILD wxpython-2.8.9.2.ebuild 4995 RMD160 1375bff373201b26226fb886e40a62a9fb3cfe0e SHA1 2db0e748c85a4eb34b741a6ae6af9987c26a043c SHA256 228c35fabb73e32bfd3cdaae8b6046e12e9fce840abeb0c6e09036d945c57837
-MISC ChangeLog 23283 RMD160 08ca42c50b3e757f3c9c42d87fa912519db68927 SHA1 ab048cb761a5b6281cd5178893e96f52e4d59a87 SHA256 25a49b987acb8e07c70c316441df4aaeda72677229026157a05986ff102d4943
+MISC ChangeLog 23409 RMD160 6128e03dc1b89c968c9c28b72f1b7c61eb9396d7 SHA1 3befe3483806bd0ed2f95474b0b2d5003a40f1a1 SHA256 016ef122386e915d259d10295f22f9643246da7ec537e9b001dfaf58a04f15c3
 MISC metadata.xml 366 RMD160 3241adb1423f2ce702bc75172a071d7c24c335e3 SHA1 363953bc2e7c364bdc92278ce391df6820c8b063 SHA256 d90a8fa164deff1b8cfa28cf401483424addfceeca8cd35539b7f2bbb3280cff
